--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
                             <div>
                                 <nav>   
                                     <ul>
-                                        
+                                        <a href="/">item 1</a>
+                                        <a href="/">item 2</a>
+                                        <a href="/">item 3</a>
+                                        <a href="/">item 4</a>
+                                        <a href="/">item 5</a>
+                                        <a href="/">item 6</a>
+                                        <a href="/">item 7</a>
+                                        <a href="/">item 8</a>
+                                        <a href="/">item 9</a>
+                                        <a href="/">item 10</a>
                                     </ul>
                                 </nav>
                             </div>
