--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>
                 <div>
                     <p>
-                        este es un pie de pagina
+                        este es un pie de pagina con modificaciones para desues hacer un merge
                     </p>
                 </div>
             </p>
