segunda modificacion con github
estoy entrenando

--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
                             <div>
                                 <nav>   
                                     <ul>
-                                        <a href="/">item 1</a>
-                                        <a href="/">item 2</a>
-                                        <a href="/">item 3</a>
-                                        <a href="/">item 4</a>
-                                        <a href="/">item 5</a>
-                                        <a href="/">item 6</a>
-                                        <a href="/">item 7</a>
-                                        <a href="/">item 8</a>
-                                        <a href="/">item 9</a>
-                                        <a href="/">item 10</a>
+                                        <a href="/">hola </a>
+                                        <a href="/">mundo</a>
+                                        <a href="/">estoy</a>
+                                        <a href="/">aprendiendo</a>
+                                        <a href="/">github</a>
                                     </ul>
                                 </nav>
                             </div>
