nuevo cambio ahora que estoy retomando el curso 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>
                 <div>
                     <p>
-                        este es un pie de pagina con modificaciones para desues hacer un merge
+                        este es un pie de pagina con modificaciones para despues hacer un merge
                     </p>
                 </div>
             </p>
