prueba de creacion de rama nueva

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </h1>
         </div>
     </header>
+    <section> ESTA ES SOLO UNA PRUEBA PARA RECORDAR GIT</section>
     <footer>
         <div>
             <p>
